# genai-chatbot

./: pyproject.toml
app/: main.py
app/config/: settings.py
app/models/: chat.py
app/routers/: __init__.py  chat.py
app/services/: chat_session.py
app/tests/: test_chat.py
scripts/: main.py
